[package]
name = "narwhal-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
description = "Model Context Protocol (MCP) server for narwhal — exposes connections, schema and queries to AI agents"
keywords = ["mcp", "database", "ai", "agent"]
categories = ["command-line-utilities", "database"]

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
narwhal-config.workspace = true
narwhal-history.workspace = true
narwhal-sql.workspace = true
narwhal-driver-registry = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
secrecy.workspace = true
base64.workspace = true
toml.workspace = true

[features]
default = ["driver-postgres", "driver-sqlite"]
driver-postgres = ["narwhal-driver-registry/driver-postgres"]
driver-sqlite = ["narwhal-driver-registry/driver-sqlite"]
driver-mysql = ["narwhal-driver-registry/driver-mysql"]
driver-duckdb = ["narwhal-driver-registry/driver-duckdb"]
driver-clickhouse = ["narwhal-driver-registry/driver-clickhouse"]
all-drivers = [
    "driver-postgres",
    "driver-sqlite",
    "driver-mysql",
    "driver-duckdb",
    "driver-clickhouse",
]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-util"] }
# Integration tests seed a real sqlite file so the production driver path
# is exercised end-to-end (handshake.rs + run_query.rs).
rusqlite.workspace = true
tempfile = "3"
chrono.workspace = true
narwhal-driver-registry = { workspace = true, features = ["all-drivers"] }
