[package]
name = "narwhal-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Connection pooling primitives for narwhal drivers"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
narwhal-driver-sqlite.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
uuid = { workspace = true }
