[package]
name = "narwhal-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQL statement splitter and lightweight tokenisation"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
memchr = "2"
serde.workspace = true
