[package]
name = "narwhal-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Ratatui-based UI layer for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
narwhal-vim.workspace = true
ratatui.workspace = true
crossterm.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
uuid.workspace = true
