[package]
name = "narwhal-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Ratatui-based UI layer for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-domain.workspace = true
narwhal-core.workspace = true
narwhal-vim.workspace = true
ratatui.workspace = true
crossterm.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
uuid.workspace = true
# Already transitive via narwhal-core; named explicitly here so the
# Json sort comparator can pattern-match on `serde_json::Value` without
# round-tripping through `.to_string()`.
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "editor_motion"
harness = false
